# mwet-schemas

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  nmr.yaml  pyproject.toml
.github/workflows/: publish_json_schema.yml  publish_site.yml
ingest/: als_nmr.py  example_env.env  ingest_script.py
json-schemas/: nmr_schema.json
src/example_data/: example-nmr-metadata.csv
src/example_data/example_nmr_data/: example_nmr_data_2.csv
src/ingest/: ingest_script.py  requirements.txt
src/nmr_schema/: als_nmr.py  csv_to_json.py  ingest.py  ingest_nmr.py  nmr.yaml  nmr_schema.yaml
